creacion de la ruta login

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,8 @@
 version: '3'
 services:
+  nginx:
+    ports:
+      - "3000:80"
   node-app:
     build:
       context: .
@@ -12,6 +15,7 @@ services:
       - NODE_ENV=development
       - MONGO_USER=skaliburn
       - MONGO_PASSWORD=gdb485093lwu2
+      - SESSION_SECRET=secret
     command: npm run dev
   mongo:
     environment:
