--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,13 @@
 version: '3'
 services:
+  nginx:
+    image: nginx:1.27.5
+    ports:
+      - "3000:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
   node-app:
     build: .
-    ports:
-      - "3000:3000"
     environment:
       - PORT=3000
     depends_on:
@@ -16,5 +20,8 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=gdb485093lwu2
     volumes:
       - mongo-db:/data/db
+
+  redis: 
+    image: redis
 volumes:
   mongo-db:
