--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "connect-redis": "^8.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^8.14.3"
+    "express-session": "^1.18.1",
+    "mongoose": "^8.14.3",
+    "redis": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
